--- a/index.html
+++ b/index.html
@@ -9,11 +9,18 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;700&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
     <title>Claire Williams</title>
 </head>
 <body>
-    <h1 class="text-center"> My Project</h1>
-    <p class="text-center">Font Testing<p>
+    <div class="text-center">
+        <h3> 👋Hello, I'm</h3>
+        <h1> Claire Williams</h1>
+        <p class="mb-5"> Front-end developer based in Scotland</p>
+        <div>
+            <a href="#" class="btn">Contact Me</a>
+        </div>
+    </div>
 </body>
 </html>
